'update raw-data, clean-data, and script files'

--- a/scripts/adopt-a-drain/Process.ipynb
+++ b/scripts/adopt-a-drain/Process.ipynb
@@ -75,12 +75,16 @@
     "* Manually, add environment variables to \".env\" file\n",
     "```\n",
     "    cd data.world/scripts/adpot-a-world\n",
-    "    \n",
+    "    IMPORT_TABLE_NAME=<name-of-table-in-raw-data>\n",
     "    GH_USER=your-github-user-name >> .env\n",
     "    DW_USER=your-data-world-user-name >> .env\n",
-    "    DW_AUTH_TOKEN=dataworld-adm-token >> .env\n",
+    "    DW_AUTH_TOKEN=secret-dataworld-adm-token >> .env\n",
     "```\n",
-    "\n"
+    "Adopt a Drain Example:\n",
+    "    IMPORT_TABLE_NAME=gr_drains\\n\n",
+    "    GH_USER=Jonesjt >> .env\\n\n",
+    "    DW_USER=jonesjt >> .env\\n\n",
+    "    DW_AUTH_TOKEN=Your-SUPER-SECRET-TOKEN >> .env\\n\n"
    ]
   },
   {
@@ -696,9 +700,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Command '['git', 'commit', '-m', \"'update raw-data, clean-data, and script files'\"]' returned non-zero exit status 1.\n"
+     ]
+    },
     {
      "data": {
       "text/markdown": [
@@ -717,13 +728,14 @@
        "* drop: wilfongjt/grb-storm-drains\n",
        "* delay: 6 seconds to delete data\n",
        "* load: complete\n",
-       "* output: https://api.data.world/v0/datasets/wilfongjt/gr_drains.csv"
+       "* output: https://api.data.world/v0/datasets/wilfongjt/gr_drains.csv\n",
+       "# gr_drains "
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,8 +750,8 @@
     "    \n",
     "    interface.github(df_source, tbl, cell_log)\n",
     "    interface.data_world(df_source, tbl, cell_log)\n",
-    "    cell_log.collect(\"# {} \".replace(\"\",table))\n",
-    "    \n",
+    "    cell_log.collect(\"# raw-data/{} cleaned \".format(table_name))\n",
+    "    cell_log.collect(\"# clean-data/{} moved to {}\".format(table_name))\n",
     "\n",
     "Markdown('''{}'''.format(cell_log.getMarkdown()))"
    ]
