--- a/scripts/adopt-a-drain/Process.ipynb
+++ b/scripts/adopt-a-drain/Process.ipynb
@@ -791,24 +791,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "branch: docs\n",
+      "\n",
       "branches:  ['*', 'docs', 'master']\n",
-      "bytelist:  b'GitHub noreply@github.com\\nJames wilfongjt@gmail.com\\n'\n",
       "users:  ['GitHub', 'noreply@github.com', 'James', 'wilfongjt@gmail.com']\n"
      ]
     }
    ],
    "source": [
     "import subprocess\n",
+    "def getBranch():\n",
+    "    '''\n",
+    "    return current branch name\n",
+    "    '''\n",
+    "    rc = subprocess.check_output([\"git\", \"branch\", \"--contains\", \"HEAD\"]).decode().replace('* ','')\n",
+    "    return rc\n",
+    "    \n",
     "def getBranchList():\n",
     "    '''\n",
     "    return list of user assigned to repo\n",
+    "    \n",
     "    \n",
     "    '''\n",
     "    bytelist = subprocess.check_output([\"git\", \"branch\"])\n",
@@ -831,10 +840,10 @@
     "    cmd = 'git log --pretty=\"%an %ae%n%cn %ce\" | sort | uniq'\n",
     "    ps = subprocess.Popen(cmd,shell=True,stdout=subprocess.PIPE,stderr=subprocess.STDOUT)\n",
     "    bytelist = ps.communicate()[0]\n",
-    "    print('bytelist: ', bytelist)\n",
+    "    #print('bytelist: ', bytelist)\n",
     "    _list = bytelist.decode().split() \n",
     "    return _list\n",
-    "\n",
+    "print(\"branch: \"+ getBranch())\n",
     "print(\"branches: \", getBranchList())\n",
     "print(\"users: \", getContributerList())"
    ]
